# cli_rust_solutions

./: .gitignore
02_echor/: Cargo.toml
02_echor/src/: main.rs
02_echor/tests/: cli.rs
03_catr/: Cargo.toml
03_catr/src/: lib.rs
04_headr/: Cargo.toml
04_headr/src/: lib.rs
04_headr/tests/: cli.rs
05_wcr/src/: lib.rs
05_wcr/tests/: cli.rs
06_uniqr/: Cargo.toml
06_uniqr/src/: lib.rs
07_findr/: .gitignore  Cargo.toml
07_findr/src/: lib.rs
07_findr/tests/: cli.rs
08_cutr/: Cargo.toml
08_cutr/src/: lib.rs
ch1/tests/: cli.rs
