[package]
name    = "echor"
version = "0.1.0"
author  = "Matt Stone <matthew.stone12@gmail.com>"
about   = "Rust echo"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
